need to fix shift input using placeholder for default value

--- a/src/hello-world/src/stylesheets/ccilab/scss/components/_ccilab-component.scss
+++ b/src/hello-world/src/stylesheets/ccilab/scss/components/_ccilab-component.scss
@@ -102,7 +102,7 @@
   }
 } 
 
-.cci-component-lable_position{
+.cci-component-label_position{
   position: relative;
 }
 
